<resources>
    <string name="app_name">Cadastro Cliente</string>
    <string name="btnLogin">Login</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="userName">User Name</string>
    <string name="Password">Password</string>
    <string name="RegisterName">Name</string>
    <string name="RegisterAge">Age</string>
    <string name="RegisterAdress">Adress</string>
    <string name="RegisterPhone">Phone</string>
    <string name="save">Save</string>
    <string name="ClienteError">Required field!</string>
    <string name="success">Sucess!</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="confirmProgress">Are you sure?</string>
    <string name="confirm">Confirm</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="erro">Campo Vazio!</string>
    <string name="persistMenu">persistMenu</string>
    <string name="errorLogin">errorLogin</string>
    <string name="find">find</string>
    <string name="tipoLogradouro">tipoLogradouro</string>
    <string name="logradouro">logradouro</string>
    <string name="bairro">bairro</string>
    <string name="cidade">cidade</string>
    <string name="estado">estado</string>
    <string name="cep">cep</string>
    <string name="loading" />
    <string name="successEdit">successEdit</string>
    <string name="erroConexao">erroConexao</string>
    <string name="formatPhoneError">formatPhoneError</string>
    <string name="formatAgeError">formatAgeError</string>
</resources>