<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <EditText
        android:id="@+id/insertName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/RegisterName"/>

    <EditText
        android:id="@+id/insertIdade"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:numeric="integer"
        android:hint="@string/RegisterAge"/>

    <EditText
        android:id="@+id/insertEnderedo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/RegisterAdress"/>

    <EditText
        android:id="@+id/insertTelefone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:digits="0123456789()-"
        android:hint="@string/RegisterPhone"/>


    <Button
        android:id="@+id/buttonFindCep"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/find" />

    <EditText
        android:id="@+id/editTextCep"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/cep" />

    <EditText
        android:id="@+id/editTextTipoLogradouro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/tipoLogradouro" />

    <EditText
        android:id="@+id/editTextLogradouro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/logradouro" />

    <EditText
        android:id="@+id/editTextBairro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/bairro" />

    <EditText
        android:id="@+id/editTextCidade"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/cidade" />

    <EditText
        android:id="@+id/editTextEstado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/estado" />


</LinearLayout></ScrollView>