<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.wrapp.floatlabelededittext.FloatLabeledEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <EditText
        android:id="@+id/nomeUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/userName"/>
    </com.wrapp.floatlabelededittext.FloatLabeledEditText>

    <com.wrapp.floatlabelededittext.FloatLabeledEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <EditText
        android:id="@+id/senhaUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Password"/>
    </com.wrapp.floatlabelededittext.FloatLabeledEditText>


    <Button
        android:id="@+id/submitLoginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnLogin"
        />

</LinearLayout>